--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@
 body {
   max-width: 100vw;
   height: 100vh;
+  font-family: "Poppins", sans-serif;
 }
 
 header {
@@ -31,7 +32,6 @@ header .container .logo span {
 }
 header .container .list-menu {
   display: flex;
-  font-family: Poppins;
   font-size: 1.25rem;
   margin-right: 100px;
 }
@@ -53,14 +53,57 @@ header .container .list-menu button {
   background-color: #C24914;
   border: 0;
   border-radius: 10px;
-  padding: 5px 19px;
+  padding: 8px 20px;
   margin-left: 45px;
-}
-header .container .list-menu button span {
   color: #fff;
   font-size: 1.25rem;
   font-weight: 700;
 }
 header .container .list-menu button:hover {
   cursor: pointer;
+}
+
+main {
+  max-width: 1280px;
+  margin: auto;
+}
+main section {
+  border: solid 1px black;
+  padding: 100px;
+  display: flex;
+  align-items: center;
+}
+main section .left-space {
+  margin-left: 100px;
+}
+main section h2 {
+  font-size: 3rem;
+  font-weight: 600;
+  margin-bottom: 34px;
+}
+main section p {
+  color: rgba(0, 0, 0, 0.46);
+  font-size: 1.25rem;
+  margin-bottom: 34px;
+}
+main section .btn-brown {
+  background-color: #682C0E;
+  border: 0;
+  padding: 8px 20px;
+  border-radius: 10px;
+  color: #fff;
+  font-size: 1.25rem;
+  font-weight: 700;
+}
+main section ul {
+  padding: 1.5rem;
+}
+main section ul li {
+  font-size: 1.5rem;
+}
+main section ul :not(:last-child) {
+  margin-bottom: 3px;
+}
+main .double {
+  display: flex;
 }/*# sourceMappingURL=styles.css.map */
